<resources>
    <string name="app_name">HomeWorks_02</string>

    <string name="checkbox_back">←   CheckBox</string>
    <string name="checked">checked</string>
    <string name="clear">Clear the input fields</string>
    <string name="download_complete">Download complete</string>
    <string name="error_email">Enter the correct e-mail</string>
    <string name="error_pass">Enter the password</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_back">←   Facebook</string>
    <string name="google">Google</string>
    <string name="google_back">←   Google</string>
    <string name="hello">Hello again</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_pass">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="progress_bar_horizontal">ProgressBar Horizontal</string>
    <string name="progress_bar_v1">ProgressBar v.1</string>
    <string name="progress_bar_v2">ProgressBar v.2</string>
    <string name="progress_bar_v3">ProgressBar v.3</string>
    <string name="sign_in">Sign in using</string>
    <string name="sign_in_toolbar">←   Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="terms">CheckBox</string>
    <string name="toast1">YOU ARE WELCOME</string>
    <string name="toast2">Do nothing</string>
    <string name="unchecked">unchecked</string>

</resources>
