<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGoogle"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:theme="@style/Theme.AppCompat.Light">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/google_back"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/progress_bar_v1"
            android:textSize="14dp" />
        <ProgressBar
            android:id="@+id/progressBar_v1"
            style="@style/ProgressBarSquare"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:baselineAligned="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/progress_bar_v2"
            android:textSize="14dp" />
        <ProgressBar
            android:id="@+id/progressBar_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar_v2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/progress_bar_v3"
            android:textSize="14dp" />
        <ProgressBar
            android:id="@+id/progressBar_v3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar_v3" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>